--- a/src/lib/PDFEditor.module.css
+++ b/src/lib/PDFEditor.module.css
@@ -1,3 +1,108 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.rootContainer {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    max-height: 100rem;
+    flex-direction: column;
+    overflow: auto;
+}
+
+.toolbarContainer {
+    --tw-bg-opacity: 1;
+    background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 2.5rem;
+    display: flex;
+    top: 0px;
+    position: sticky;
+}
+
+.toolbarButton {
+    padding-left: 0px;
+    padding-right: 0px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+    border-width: 0px;
+    justify-content: center;
+    align-items: center;
+    width: 2.25rem;
+    height: 2rem;
+    display: flex;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.toolbarButton:hover {
+    background-color: #dddddd;
+}
+
+.svgIcon {
+    cursor: pointer;
+    width: 1rem;
+    height: 1rem;
+    display: block;
+}
+
+.svgMediumIcon {
+    cursor: pointer;
+    width: 1.25rem;
+    height: 1.25rem;
+    display: block;
+}
+
+.pdfContainer {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(230 230 230 / var(--tw-bg-opacity));
+    overflow: auto;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+}
+
+.pdfPageContainer {
+    position: relative;
+}
+
+.pdfSelect {
+    --tw-bg-opacity: 1;
+    background-color: rgb(242 244 254 / var(--tw-bg-opacity));
+    border-top-width: 0px;
+    border-bottom-width: 1px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    position: absolute;
+    font-size: 75%;
+    padding: 0;
+    padding-block: 0;
+    padding-inline: 0;
+    margin: 0 0;
+}
+
+.pdfSelect:focus {
+    background-color: white;
+}
+
+.pdfInput {
+    --tw-bg-opacity: 1;
+    background-color: rgb(242 244 254 / var(--tw-bg-opacity));
+    border-top-width: 0px;
+    border-bottom-width: 1px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    position: absolute;
+    padding: 0 0;
+    padding-block: 0;
+    padding-inline: 0;
+    margin: 0 0;
+}
+
+.pdfInput:focus {
+    background-color: white;
+}
